# sat-sudoku

./: .gitignore  CMakeLists.txt
include/: cnf.h  cnfparser.h  display.h  solver.h  sudoku.h
src/: cnfparser.c  display.c  main.c  solver.c  sudoku.c
