cmake_minimum_required(VERSION 3.17)

PROJECT(sat-sudoku)

SET(CMAKE\_C\_COMPILER gcc)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(CMAKE_BUILD_TYPE debug)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC_LIST)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})